diesel_compile_tests/tests/fail/derive/no_table.stderr
error[E0433]: cannot find module or crate `users` in this scope
 --> tests/fail/derive/no_table.rs:5:8
  |
LL | struct User {
  |        ^^^^ use of unresolved module or unlinked crate `users`
  |
  = help: you might be missing a crate named `users`

error[E0433]: cannot find module or crate `users` in this scope
  --> tests/fail/derive/no_table.rs:12:23
   |
LL | #[diesel(table_name = users)]
   |                       ^^^^^ use of unresolved module or unlinked crate `users`
   |
   = help: you might be missing a crate named `users`
For more information about this error, try `rustc --explain E0433`.
